--- a/FrontEnd/src/assets/styles/title.css
+++ b/FrontEnd/src/assets/styles/title.css
@@ -4,8 +4,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   width:80%; 
-   gap:1.5rem
+  
+   gap:1.5rem;
+   /* background-color: red; */
+   width:100%;
 }
 .titre-lg{
   
@@ -13,14 +15,20 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width:80%;
+ 
     gap:0rem;
+    /* background-color: yellow; */
+    width:100%;
+    gap:0rem;
+    background-color: darkblue;
+    
+
  
   
 }
 .titre-lg h3{
   
-    width:20%;
+
     color: #38B000;
       font-family: 'Neo Sans Arabic', sans-serif;
   font-weight: 500;
@@ -30,7 +38,10 @@
   letter-spacing: 0;
   text-align: center;
   text-transform: capitalize;
-   margin: 0
+   margin: 0;
+ 
+   width:auto;
+   padding:0rem;
 
   
 
@@ -72,7 +83,7 @@ height: 5.6804485321045135px;
 background: linear-gradient(90deg, #FFFFFF 0%, #FFD000 100%);
 }
 .titre-lg{
-    background-color: darkcyan;
+    
 }
 .titre-lg h3{
 padding:0rem;
@@ -83,8 +94,10 @@ width:18%;
      .titre-lg h3{
         /* background-color: #38B000; */
         font-size: 2rem;
+        
 
      }
+  
 }
 @media(max-width :480px){
     .titre-lg{
