--- a/FrontEnd/src/assets/styles/local.css
+++ b/FrontEnd/src/assets/styles/local.css
@@ -6,7 +6,7 @@
   width: 80%;
   display: flex;
   justify-content: center;
-  left: 10%;
+  left: 8%;
 }
 .grandeSection{
 /* background-color: red; */
@@ -96,7 +96,7 @@ width: 100%;
 
   }
 }
-@media (min-width:2560px){
+@media (min-width:2560px) and (min-height:1440px){
    .localSection {
     /* background-color: aqua; */
     width: 80%;
@@ -141,7 +141,7 @@ width: 100%;
     /* margin-right: 8px; */
     /* background-color: aqua; */
     width: 100%;
-    translate:27vh;
+    translate:20vh;
     
   }
 
@@ -175,6 +175,7 @@ width: 100%;
 
   .phrase {
     width: 100%;
+    top: -18vh;
     /* right: 6px; */
     left: -4vh;
 
