--- a/FrontEnd/src/assets/styles/who.css
+++ b/FrontEnd/src/assets/styles/who.css
@@ -269,6 +269,10 @@
         margin-left: -12%;
         margin-top: 3vh;
     }
-    
+    .Who-titre{
+        /* background-color: red; */
+        /* width: 100%; */
+        margin-left: 12vh;
+    }
   
 }
