--- a/FrontEnd/src/assets/styles/footer.css
+++ b/FrontEnd/src/assets/styles/footer.css
@@ -14,7 +14,7 @@
  }
  .buttonFooter{
   border-radius: 1vh;
-  background-color: red;
+  /* background-color: red; */
 
  }
 
@@ -49,7 +49,7 @@
 
 
    }
-
+ 
    .form {
      margin-top: -30vh;
      z-index: 1000;
@@ -65,7 +65,9 @@
      right: 0vh;
   
    }
-
+.ichatithan{
+  z-index: 200;
+}
    .mobile {
      background-image: url('/organisme-badr-web/images/image1.jpg');
      background-repeat: no-repeat;
