--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -514,6 +514,7 @@ top:32%
     /* display:none */
     bottom: 0%;
     right:-1%;
+   
   }
   .graph24-bottom{
     
@@ -521,7 +522,8 @@ top:32%
     right:-2%;
     bottom:4%;
   width:12%;
-  transform:rotate(-40deg)
+  transform:rotate(-40deg);
+ 
   }
   .graph26-bottom{
     /* display:none; */
@@ -693,6 +695,20 @@ top:32%
         padding: 0;
          padding: 1rem;
          gap:0.5rem;
+       z-index: 200;
+    }
+    .care-name{
+      /* background: darkgoldenrod; */
+      z-index: 100;
+    }
+    .care-name img{
+      /* background-color: darkgreen; */
+      z-index: 200;
+    }
+
+    .care-p p{
+    
+      z-index: 1800;
     }
     .image {
         width: 100%; 
@@ -754,33 +770,31 @@ top:32%
       z-index: 900;
       width:50%;
       bottom:5.1%;
-      right:0%;
-      /* background-color: darkblue; */
-      /* background-color: darkcyan; */
+      right:0%;z-index: 1;
+   
     }
     .graph24-bottom{
-      /* display:none; */
-      /* background-color: blueviolet; */
+    
       bottom:7%;
       width:18%;
       right:-3.5%;
       
     }
     .graph26-bottom{
-      /* display:none; */
-      /* background-color: aqua; */
+     
       width:6%;
       bottom: 10%;
       right:-1%;
     }
     .graph27-bottom{
-      /* display:none */
+      
       width:7%;
       bottom: 4%;
       right:32%;
+      
     }
     .graph-b{
-      /* display:none; */
+     
       right:42%;
       width:15%;
       
