--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -351,15 +351,22 @@ z-index: 100;
   /* background-color: darkgoldenrod; */
   
  display:flex;
- justify-content: center;
- align-items: center;
- padding-right:3rem;
+justify-content: center;
+align-items: center;
+ 
  padding-top:0rem;
  gap:1.2rem;
- padding-left: 3rem;
+
+ background-color: pink;
+ width:50%;
  
- padding-right:5rem;
 }
+.care{
+  background-color: blue;
+  gap:0rem;
+}
+.image{width:50%;}
+
 
 }
 
