--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -353,16 +353,16 @@ z-index: 100;
  display:flex;
 justify-content: center;
 align-items: center;
- 
+ padding-right: 5rem;
  padding-top:0rem;
  gap:1.2rem;
 
- background-color: pink;
+ 
  width:50%;
  
 }
 .care{
-  background-color: blue;
+
   gap:0rem;
 }
 .image{width:50%;}
