--- a/FrontEnd/src/assets/styles/who.css
+++ b/FrontEnd/src/assets/styles/who.css
@@ -8,7 +8,8 @@
 
 .slider-container {
     /* background-color: red; */
-    /* height: 20%; */
+    /* height: 50%; */
+    /* scale: 0.75; */
 
 }
 
@@ -43,8 +44,10 @@
     margin-top: 3rem;
     display: flex;
     align-items: center;
-    scale: 0.5;
-    height: 10vh;
+    width: 100%;
+    scale: 0.65;
+    gap: 20vh;
+    height: 12vh;
 }
 
 
@@ -208,7 +211,7 @@
 
 }
 
-@media (min-width:2560px) {
+@media (min-width:2560px) and (min-height:1400px) {
     .slider-track {
         /* margin-top: 2rem; */
         /* background-color: antiquewhite; */
@@ -216,7 +219,7 @@
         display: flex;
         align-items: center;
         height: 18vh;
-        scale: 0.3;
+        /* scale: 0.3; */
 
     }
 
@@ -240,7 +243,7 @@
         /* background-color: red; */
         width: 100%;
       height: 10vh;
-        /* margin-left: 39%; */
+        margin-left: 28%;
         margin-top: 5%;
    
 
