--- a/FrontEnd/src/assets/styles/footer.css
+++ b/FrontEnd/src/assets/styles/footer.css
@@ -17,7 +17,18 @@
   /* background-color: red; */
 
  }
-
+ .footer-section {
+  height: 100vh; /* Hauteur réduite */
+  overflow: hidden; /* Cache ce qui dépasse */
+  gap: 10px; /* Espace entre les images (optionnel) */
+}
+ .phrase01{
+      /* background-color: red; */
+      margin-top: -10vh;
+    
+      font-weight: normal;
+     /* scale: 1.75; */
+    }
  .contact-info-bg {
    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 58.555%, rgba(255, 255, 255, 0) 100%);
  }
@@ -95,14 +106,29 @@
      bottom: -50vh;
    }
  } */
-  @media (min-width:2560px) {
+  @media (min-width:2560px) and (min-height:1400px) {
     .iconsFotter{
       scale: 1.5;
       /* background-color: aqua; */
       height: 25vh;
-    
+ 
 
 }
+.footer-section {
+  height: 80vh; /* Hauteur réduite */
+  overflow: hidden; /* Cache ce qui dépasse */
+  gap: 10px; /* Espace entre les images (optionnel) */
+}
+
+
+/* .footer-section {
+  background-color: aquamarine;
+  height: 2vh;
+} */
+   .textInput{
+      /* background-color: red; */
+      font-size: x-large;
+    }
 .iconsnFotter{
 /* background-color: red; */
       scale: 1.15;
