--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -126,7 +126,7 @@ flex-direction: row-reverse;
 .image img {
  width: 100%;
   height: 100%; 
-  /* display: block; */
+ 
   border-bottom-right-radius: 25.37px;
   border-top-right-radius: 25.37px;
   object-fit: cover;
@@ -139,7 +139,7 @@ flex-direction: row-reverse;
   display:flex;
   flex-direction: column;
  gap:1rem;
- padding:3rem;
+ padding:2rem;
 
  
   
@@ -165,7 +165,6 @@ flex-direction: row-reverse;
 }
 .care-name .graph{
     width:10%;
-    
 }
 .care-name h2{
     color: #FFB700;
@@ -174,8 +173,6 @@ flex-direction: row-reverse;
     line-height: 2.12rem; 
   letter-spacing: 0;
   text-align: right;
-  
-
 
 }
 .care-name h2 span{
@@ -195,7 +192,6 @@ flex-direction: row-reverse;
   border-radius: 99.07px;
   border:none;
   width:100%;
-
   background: linear-gradient(180deg, #38B000 0%, #FFC400 107.1%);
 
 
@@ -217,9 +213,6 @@ flex-direction: row-reverse;
 
   color: black; 
   z-index: 10;
- 
-  direction:ltr
- 
 
 
   
@@ -324,48 +317,118 @@ z-index: 100;
  right:35%;
   transform: rotate(-40.36deg);
 }
+* {
+  box-sizing: border-box;
+}
+
+.care {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.image {
+  width: 50%;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.care-content {
+  width: 50%;
+  padding: 2rem; /* moins que 3rem */
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 @media(min-width:2560px){
 
+  .care-section{
+    /* background-color:pink; */
+    height:auto;
+    width:100%;
+  }
+  .cares{
+    /* background-color: darkgoldenrod; */
+    height:auto
+  }
+  .care{
+    width:100%;
+    height:auto;
 
+  }
 .care-content p{
  
  
-  width:80%;
+  width:60%;
   display:flex;
   line-height:1.9 ;
- 
+  /* background-color: white; */
   
+
+}
+.care{
+  /* background-color: darkblue; */
+  gap:0rem
+}
+.care-name{
+  width:180%;
+}
+.care-name{
+  width:200%;
+
 
 }
 .care-name .graph{
   /* background-color: darkcyan; */
-  width:7%
+  width:9%
 }
+.care-content h3{
+  width:200%;
+
+  direction: ltr;
+
+}
+
 .care-p{
   /* background-color: yellow; */
   display:flex;
   justify-content: end;
+  width: 200%;
   align-items: end;
+    
 }
 .care-content{
   /* background-color: darkgoldenrod; */
-  
+  /* width: 10%; */
  display:flex;
-justify-content: center;
-align-items: center;
- padding-right: 5rem;
- padding-top:0rem;
- gap:1.2rem;
+ justify-content: center;
+ align-items: center;
+
+
 
  
- width:50%;
- 
-}
-.care{
+ /* background-color: saddlebrown; */
 
-  gap:0rem;
 }
-.image{width:50%;}
+
+.image {
+  width: 50%;
+  /* background-color: red; */
+}
+.graph{
+  width:-80%;
+  background-color: darkblue;
+}
+
+
+
 
 
 }
@@ -521,7 +584,6 @@ top:32%
     /* display:none */
     bottom: 0%;
     right:-1%;
-   
   }
   .graph24-bottom{
     
@@ -529,8 +591,7 @@ top:32%
     right:-2%;
     bottom:4%;
   width:12%;
-  transform:rotate(-40deg);
- 
+  transform:rotate(-40deg)
   }
   .graph26-bottom{
     /* display:none; */
@@ -702,20 +763,6 @@ top:32%
         padding: 0;
          padding: 1rem;
          gap:0.5rem;
-       z-index: 200;
-    }
-    .care-name{
-      /* background: darkgoldenrod; */
-      z-index: 100;
-    }
-    .care-name img{
-      /* background-color: darkgreen; */
-      z-index: 200;
-    }
-
-    .care-p p{
-    
-      z-index: 1800;
     }
     .image {
         width: 100%; 
@@ -777,31 +824,33 @@ top:32%
       z-index: 900;
       width:50%;
       bottom:5.1%;
-      right:0%;z-index: 1;
-   
+      right:0%;
+      /* background-color: darkblue; */
+      /* background-color: darkcyan; */
     }
     .graph24-bottom{
-    
+      /* display:none; */
+      /* background-color: blueviolet; */
       bottom:7%;
       width:18%;
       right:-3.5%;
       
     }
     .graph26-bottom{
-     
+      /* display:none; */
+      /* background-color: aqua; */
       width:6%;
       bottom: 10%;
       right:-1%;
     }
     .graph27-bottom{
-      
+      /* display:none */
       width:7%;
       bottom: 4%;
       right:32%;
-      
     }
     .graph-b{
-     
+      /* display:none; */
       right:42%;
       width:15%;
       
@@ -816,4 +865,3 @@ top:32%
     /* background-color: #38B000; */
   }
 }
-
