--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -149,7 +149,7 @@ transform: translateY(-100.5%);
  
  
 
-  font-size: clamp(1.125rem, 1.5vw + 0.75rem, 1.5rem); /* 18px à 24px */
+  font-size: clamp(1.125rem, 1.5vw + 0.75rem, 1.6rem); /* 18px à 24px */
   line-height: 1.42; /* 142% */
   letter-spacing: 0;
  
@@ -225,7 +225,7 @@ button {
 
 
 
-@media(min-width:2559px){
+@media(min-width:2560px){
 
   .donate-wrapper{
     /* background-color: antiquewhite; */
@@ -282,7 +282,7 @@ gap:5000rem;
     /* background-color: fuchsia; */
   width:100%;
 
-  font-size: 1.6rem;
+ 
     
 
   }
@@ -293,13 +293,19 @@ gap:5000rem;
   }
   .title-line h3{
     /* background-color: darkgreen; */
-    font-size: 2.5rem;
+    font-size: 2.7rem;
+    /* background-color: red; */
   }
   .content-box p{
     /* background-color: darkmagenta; */
-    font-size: 6rem;
+   
+  
     max-width:25vw;
     line-height: 1.6;
+   font-size:1.7rem;
+   /* background-color: darkblue; */
+   
+    
   }
   button{
 
@@ -443,9 +449,12 @@ gap:5000rem;
     display:flex;
     justify-content: center;
     align-items: center;
-  
+   
     width:100%;
     padding:2rem;
+    padding-top:0rem;
+    margin-top:1rem;
+  
   }
   
    .donate-card {
