--- a/FrontEnd/src/assets/styles/scrollToTop.css
+++ b/FrontEnd/src/assets/styles/scrollToTop.css
@@ -41,6 +41,18 @@
   outline: none;
   border: none;
 }
+@media(max-width:480px) {
+  .scroll-to-top {
+     position: fixed;
+  bottom: 40px;
+  right: 40px;
 
+  width: 72px;
+  height: 72px;
+
+ 
+  }
+ 
+}
 
 
