--- a/FrontEnd/src/assets/styles/who.css
+++ b/FrontEnd/src/assets/styles/who.css
@@ -95,6 +95,12 @@
         margin-left: 30%;
 
     }
+.test{
+        /* background-color: aqua; */
+        /* scale: 1.2; */
+        margin-left: 1%;
+        /* margin-top: 3vh; */
+    }
 
     .who-prDiv {
         display: flex;
@@ -106,7 +112,7 @@
 
     .partenaire {
         /* background-color: aqua; */
-        height: 10vh;
+        height: 14vh;
     }
 
     .ligne1 {
@@ -123,7 +129,8 @@
         /* background-color: yellow; */
         width: 100%;
         /* display: none; */
-        margin-top: 1rem;
+        margin-top: 2rem;
+        z-index: 100;
     }
 
     .slider-track {
@@ -175,9 +182,30 @@
         height: 5vh;
 
     }
+    .test{
+        /* background-color: aqua; */
+        /* scale: 1.2; */
+        margin-left: 1%;
+        /* margin-top: 3vh; */
+    }
+
     .slider-container {
         height: 12vh;
         /* background-color:red ; */
+    }
+  
+       .partenaire{
+        /* background-color: red; */
+        height: 14vh;
+    }
+     .slider-container {
+        height: 15vh;
+        top: 3vh;
+        /* background-color:red ; */
+    }
+    .ligne3{
+        margin-top: 3vh;
+        /* background-color: aqua; */
     }
 
 }
@@ -193,6 +221,58 @@
         height: 5vh;
 
     }
+    .test{
+        /* background-color: aqua; */
+        /* scale: 1.2; */
+        margin-left: 1%;
+        /* margin-top: 3vh; */
+    }
+
+       .partenaire{
+        /* background-color: red; */
+        height: 14vh;
+    }
+     .slider-container {
+        height: 15vh;
+        top: 3vh;
+        /* background-color:red ; */
+    }
+    .ligne3{
+        margin-top: 3vh;
+        /* background-color: aqua; */
+    }
+
+}
+@media (min-width:393px) and (max-width:400px) {
+    .partenaire{
+        /* background-color: red; */
+        height: 14vh;
+    }
+    .slider-track {
+        margin-top: 5vh;
+        /* background-color: antiquewhite; */
+        /* margin-bottom: 2rem; */
+        display: flex;
+        scale: 1.10;
+        align-items: center;
+        height: 12vh;
+
+    }
+    .test{
+        /* background-color: aqua; */
+        /* scale: 1.2; */
+        margin-left: 1%;
+        /* margin-top: 3vh; */
+    }
+
+     .slider-container {
+        height: 15vh;
+        /* background-color:red ; */
+    }
+    .ligne3{
+        margin-top: 0.5vh;
+        /* background-color: aqua; */
+    }
 
 }
 
@@ -207,6 +287,25 @@
         align-items: center;
         height: 5vh;
 
+    }
+      .partenaire{
+        /* background-color: red; */
+        height: 14vh;
+    }
+     .slider-container {
+        height: 15vh;
+        top: 3vh;
+        /* background-color:red ; */
+    }
+    .ligne3{
+        margin-top: 3vh;
+        /* background-color: aqua; */
+    }
+     .test{
+        /* background-color: aqua; */
+        /* scale: 1.2; */
+        margin-left: 1%;
+        /* margin-top: 3vh; */
     }
 
 }
