--- a/FrontEnd/src/assets/styles/presedent.css
+++ b/FrontEnd/src/assets/styles/presedent.css
@@ -35,6 +35,7 @@
     gap: 10vh ;
   }
   .image{
+    margin-top: -8vh;
     display: flex;
     justify-content: center;
   }
@@ -58,7 +59,7 @@
   .secondTitre{
     font-size: large;
     display: flex;
-    justify-content: end;
+    justify-content: start;
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -74,7 +75,7 @@
   }
   .titre3{
     display: flex;
-    justify-content: end;
+    justify-content: start;
   }
   .phrase0{
     margin-top: 10px;
