--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -4,6 +4,7 @@
 .service-section{
 
   width:100%;
+  margin-top:0rem;
   display:flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
