change in donate

--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -512,6 +512,21 @@ font-size: 1.8rem;
  
   
 }
+.activite-pecture{
+  /* background-color: pink; */
+  /* background-color: red; */
+}
+.activite-content{
+  /* background-color: red; */
+  align-items: right;
+  padding:0rem;
+  
+ 
+}
+.activite-section{
+  /* background-color: pink; */
+}
+
  
 
 
@@ -1165,18 +1180,26 @@ font-size: 1.8rem;
 
   }
 
-  .activite-groupe {
+  /* .activite-groupe {
    
     gap: 0.2rem;
-  }
-
+  } */
+   /* .next,.prev{
+    background-color: pink;
+    display:none
+   } */
  
+   .activite{
+    width:80%
+   }
+  
+  
 
   @media(min-height:700px) {
     .activite-groupe {
     
       padding: 0;
-      gap: 1rem;
+     
     }
 
     .image-div {
