--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -898,7 +898,11 @@ top:32%
     .care-content h3{
    direction: ltr;
 }
-    
+.graph22-bottom{
+  /* display:none */
+  z-index: 0;
+}
+  
     
 }
 @media(max-width:440px) and (min-width:300px){
