--- a/FrontEnd/src/assets/styles/footer.css
+++ b/FrontEnd/src/assets/styles/footer.css
@@ -219,7 +219,7 @@
   
    }
  }
-  @media (min-width:2560px) and (min-height:1400px) {
+  @media (min-width:2560px) {
     .iconsFotter{
       scale: 1.5;
       /* background-color: aqua; */
