--- a/FrontEnd/src/assets/styles/local.css
+++ b/FrontEnd/src/assets/styles/local.css
@@ -114,7 +114,7 @@ width: 100%;
     /* align-items: center; */
   }
 }
-@media (min-width:2560px) and (min-height:1400px){
+@media (min-width:2560px) {
    .localSection {
     /* background-color: aqua; */
     width: 80%;
