--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -1382,9 +1382,24 @@ flex-wrap: nowrap;
 
 
 
+width:100%;
+padding:0rem;
 
 
  }
+ .nav-conten{
+  width:100%;
+ }
+ .main-nav{
+ 
+  width:100%;
+  
+ }
+ .main-nav .container{
+  width:100%;
+  padding:0rem;
+ }
+ 
 
 }
 
